--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
     "react-native-material-ui": "^1.30.1",
     "react-navigation": "^3.8.1",
-    "react-redux": "^6.0.0",
-    "redux": "^4.0.1",
+    "react-redux": "4.0.0",
+    "redux": "3.0.0",
     "redux-axios-middleware": "^4.0.0"
   },
   "devDependencies": {
